@@ -373,9 +373,9 @@ matrix.rotateBy(45);
               <dl class='parameters'>
                 <dt>double scale</dt>
                 <dd>Multiplier for a uniform scale transformation.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
@@ -385,11 +385,11 @@ matrix.rotateBy(45);
               <dl class='parameters'>
                 <dt>double scale</dt>
                 <dd>Multiplier for a uniform scale transformation.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
-                <dt>optional double z</dt>
+                <dt>optional double originZ</dt>
                 <dd>Transformation origin on the z-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a uniform scale transformation (<code>m11 = m22 = m33 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
@@ -403,11 +403,11 @@ matrix.rotateBy(45);
                 <dd>Multiplier for a non-uniform scale along the y-axis. Defaulting to 1.</dd>
                 <dt>optional double scaleZ</dt>
                 <dd>Multiplier for a non-uniform scale along the z-axis. Defaulting to 1.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
-                <dt>optional double z</dt>
+                <dt>optional double originZ</dt>
                 <dd>Transformation origin on the z-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a non-uniform scale transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
@@ -417,9 +417,9 @@ matrix.rotateBy(45);
               <dl class='parameters'>
                 <dt>double angle</dt>
                 <dd>Rotation angle in degrees.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a rotation transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.
@@ -538,9 +538,9 @@ matrix.rotateBy(45);
               <dl class='parameters'>
                 <dt>double scale</dt>
                 <dd>Multiplier for a uniform scale transformation.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = scale</code>) on the current matrix with the given origin.
@@ -550,11 +550,11 @@ matrix.rotateBy(45);
               <dl class='parameters'>
                 <dt>double scale</dt>
                 <dd>Multiplier for a uniform scale transformation.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
-                <dt>optional double z</dt>
+                <dt>optional double originZ</dt>
                 <dd>Transformation origin on the z-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = m33 = scale</code>) on the current matrix with the given origin.
@@ -568,11 +568,11 @@ matrix.rotateBy(45);
                 <dd>Multiplier for a non-uniform scale along the y-axis. Defaulting to 1.</dd>
                 <dt>optional double scaleZ</dt>
                 <dd>Multiplier for a non-uniform scale along the z-axis. Defaulting to 1.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
-                <dt>optional double z</dt>
+                <dt>optional double originZ</dt>
                 <dd>Transformation origin on the z-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a non-uniform scale transformation on the current matrix with the given origin.
@@ -582,9 +582,9 @@ matrix.rotateBy(45);
               <dl class='parameters'>
                 <dt>double angle</dt>
                 <dd>Rotation angle in degrees.</dd>
-                <dt>optional double x</dt>
+                <dt>optional double originX</dt>
                 <dd>Transformation origin on the x-axis. Defaulting to 0.</dd>
-                <dt>optional double y</dt>
+                <dt>optional double originY</dt>
                 <dd>Transformation origin on the y-axis. Defaulting to 0.</dd>
               </dl>
               Post-multiplies a rotation transformation on the current matrix with the given origin.
