@@ -1,3 +1,6 @@
+2013-03-08  Dirk Schulze  <dschulze@adobe.com>
+	New naming for origin arguments.
+
 2013-03-07  Dirk Schulze  <dschulze@adobe.com>
 	Fixed typos in defitnions.
 
