@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-03-08  Dirk Schulze  <dschulze@adobe.com>
+- Fixed typos. Added issue to support previous filter primitive
+  for custom filter.
+
 2013-02-28  Dirk Schulze  <dschulze@adobe.com>
 - Added attribute description to feCustomSource element.
 
